Removing front and directing visitors directly to login

--- a/client/stylesheets/custom.css
+++ b/client/stylesheets/custom.css
@@ -12,7 +12,8 @@ strong {
 }
 
 .main-layout header, .main-layout main, .main-layout footer {
-	padding-left: 240px;
+	/*padding-left: 240px;*/
+	margin-top: 50px;
 }
 
 blockquote {
